--- a/header.css
+++ b/header.css
@@ -1,4 +1,4 @@
-li{
+#header li{
 	display:inline-block;
 	background-color:blue;
 	color:white;
@@ -7,7 +7,7 @@ li{
 	vertical-align:top;
 }
 
-li a{
+#header li a{
 	color:white;
 	padding:10px;
 	margin:10px;
