--- a/style.css
+++ b/style.css
@@ -14,5 +14,94 @@ div #left_panel
 {
 	width: 150px;
 	border:solid 2px blue;
+}
 
+h1
+{
+	text-align: center;
+	font-family: helvetica neue;
+}
+
+/*
+#categories img
+{
+	display: block;
+	position: left;
+	margin-top: 10vw;
+	width: 10vw;
+}
+*/
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 5vw);
+    grid-gap: 15px;
+}
+
+.gallery__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+#categories ul
+{
+		list-style:none;
+}
+
+.categories
+{
+	text-align: center;
+	font-family: helvetica neue;
+}
+
+
+.categories li
+{
+	display: inline-block;
+
+}
+
+.categories a
+{
+	text-decoration: none;
+	color: #FFDE4A;
+	font-family: helvetica neue;
+	font-size: 1.5vw;
+	margin: 0.5vw;
+}
+
+.categories a:hover
+{
+    color: black;
+}
+
+
+#header
+{
+		text-align: center;
+}
+
+#header li{
+	display: inline-block;
+	border-color: #FFDE4A;
+	border-style: solid;
+	width: 10vw;
+	padding: 1vw;
+	margin: 0.5vw;
+	text-align: center;
+}
+
+#header li a{
+	color:black;
+	text-decoration: none;
+	font-family: helvetica neue;
+	font-size: 1.5vw;
+}
+
+
+#header ul > li:hover
+{
+    background-color: #FFDE4A;
 }
