--- a/style.css
+++ b/style.css
@@ -22,30 +22,20 @@ h1
 	font-family: helvetica neue;
 }
 
-/*
-#categories img
+.gallery
 {
-	display: block;
-	position: left;
-	margin-top: 10vw;
+	width: 100%;
+}
+
+.gallery img
+{
+	display: inline-block;
 	width: 10vw;
-}
-*/
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 5vw);
-    grid-gap: 15px;
-}
-
-.gallery__img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+	margin: 0.5vw;
 }
 
 
-#categories ul
+.gallery ul
 {
 		list-style:none;
 }
