--- a/style.css
+++ b/style.css
@@ -68,12 +68,12 @@ h1
 }
 
 
-#header
+nav
 {
 		text-align: center;
 }
 
-#header li{
+nav li{
 	display: inline-block;
 	border-color: #FFDE4A;
 	border-style: solid;
@@ -83,7 +83,7 @@ h1
 	text-align: center;
 }
 
-#header li a{
+nav li a{
 	color:black;
 	text-decoration: none;
 	font-family: helvetica neue;
@@ -91,7 +91,34 @@ h1
 }
 
 
-#header ul > li:hover
+nav ul > li:hover
 {
     background-color: #FFDE4A;
+}
+
+
+nav li .on
+{
+	display: inline-block;
+	background-color: #FFDE4A;
+}
+
+form
+{
+	display: block;
+	margin-top: 10%;
+	color: black;
+	font-family: helvetica neue;
+	font-size: 1.5vw;
+	text-align: center;
+	line-height: 5vw;
+}
+
+
+form label
+{
+	color: black;
+	font-family: helvetica neue;
+	font-weight: lighter;
+
 }
