--- a/style.css
+++ b/style.css
@@ -17,18 +17,14 @@ h1
 	font-family: helvetica neue;
 }
 
-
-
 .categories
 {
 	text-align: center;
 }
 
-
 .categories li
 {
 	display: inline-block;
-
 }
 
 .categories a
@@ -45,12 +41,10 @@ h1
     color: black;
 }
 
-
 nav
 {
 	text-align: center;
 }
-
 
 nav li.admin
 {
@@ -97,7 +91,6 @@ nav ul li.nav_hover:hover
     background-color: #FFDE4A;
 }
 
-
 form
 {
 	display: block;
@@ -109,7 +102,6 @@ form
 	text-align: center;
 	line-height: 5vw;
 }
-
 
 form label
 {
@@ -134,8 +126,6 @@ form label
 	border-radius: 0.5
 }
 
-
-
 .product .txt_product
 {
 opacity:0;
@@ -159,13 +149,10 @@ line-height: 5vw;
   opacity:1;
 }
 
-
 .products .img_product:hover img
 {
 	filter: blur(2px)grayscale(85%);
-
 }
-
 
 .products a .btton_buy
 {
@@ -198,5 +185,27 @@ line-height: 5vw;
   height: 20vw;
   margin: auto
 }
+
+
+.container_login, .container_signup
+{
+	border:solid 2px black;
+	width:400px;
+	margin-left:auto;
+	margin-right:auto;
+	text-align:left;
+	padding:50px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 /***** TEST *****/
