--- a/style.css
+++ b/style.css
@@ -219,4 +219,25 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
+
+.user_connect
+{
+	position:absolute;
+	right:10px;
+	top:10px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /***** TEST *****/
